style/form.css
.form-filter-pet {
    width: 90%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: auto;
    height: 400px;
}

.header-main{
    margin-top: 13px;
    margin: auto;
    width: 100%;
    max-width: 1126px;
}
.control-form-options:nth-of-type(2) {
    width: 30%;
}

.control-form-options:nth-of-type(1) {
    width: 27%;
}
.control-form-options:nth-of-type(3) {
    width: 23%;
}


.control-form-options {
    padding: 10px;
    width: 30%;
    font-size: 5rem;
}

.control-form-options select {
    border-radius: 10px;
    padding: 7px;
    width: 100%;
}

.control-form-range {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    padding-top: 10px;
    width: 30%;
    flex-wrap: wrap;
}

.control-form-range-img {
    width: 100%;
    display: flex;
    align-items: flex-end;
    justify-content: space-around;
}
.control-form-range-img img:nth-child(3){
    width: 90px;
    height: 90px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.control-form-range-img img:nth-child(2){
    width: 75px;
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.control-form-range-img img:nth-child(1){
    width: 65px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.control-form-range input[type=range] {
    width: 100%;
    color: var(--red);
    background-color: var(--red);
}
input[type="range"] {
    -webkit-appearance: none;
    width: 100%;
    height: 5px;
    line-height: 10px;
    outline: none;
    opacity: 0.8;
    transition: opacity .2s;
}

input[type="range"]:hover {
    opacity: 1;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px;
    height: 20px;
    background: url('../assets/Vector.png') no-repeat center;
    background-size: contain;
    cursor: pointer;
}

input[type="range"]::-moz-range-thumb {
    width: 20px;
    height: 20px;
    background: url('../assets/Vector.png') no-repeat center;
    background-size: contain;
    cursor: pointer;
}
#display{
    width: 100%;
    display: flex;
    justify-content: flex-start;
}

/* .control-form-checkbox {
    background-color: white;
    width: 90%;
    height: 90%;
    border-radius: 60px;
    background-color: white;
    border-radius: 50%;
    vertical-align: middle;
    border: 1px solid #ddd;
    appearance: none;
    -webkit-appearance: none;
    outline: none;
    cursor: pointer;
} */

.control-form-checkbox {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--yellow);
    width: 39%;
    height: 55%;
    border-radius: 20px;
}

input[type="checkbox"] {
    width: 80%;
    height: 90%;
    display: none;
}

label {
    position: relative;
    display: inline-block;
    width: 90%;
    height: 60%;
    cursor: pointer;
}

label::before {
    content: '';
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 75%;
    height: 100%;
    border-radius: 50%;
    background-color: white;
}

.gato::after {
    content: url("../assets/cat\ 1.svg");
    display: block;
    position: absolute;
    top: 20%;
    left: 35%;
    transform: translate(-50%, -50%);
    width: 12px;
    height: 12px;
}

.cachorro::after {
    content: url("../assets/image\ 168.svg");
    display: block;
    position: absolute;
    top: 27%;
    left: 35%;
    transform: translate(-50%, -50%);
    width: 15px;
    height: 15px;
}

input[type="checkbox"]:checked+label.gato::before {
    background-color: var(--red);
}

input[type="checkbox"]:checked+label.gato::after {
    opacity: 1;
}

input[type="checkbox"]:checked+label.cachorro::before {
    background-color: var(--red);
}

input[type="checkbox"]:checked+label.cachorro::after {
    opacity: 1;
}

.control-form-radio {
    display: flex;
    align-items: center;
    justify-content: space-around;
    border-radius: 10%;
    background-color: var(--yellow);
    width: 30%;
}
.control-form-radio input[type="radio"] + label::before {
    background-color: transparent;
    width: 70px;
    height: 70px;
    transform: translate(-55%, -55%) ; /
}

.control-form-radio input[type="radio"] {
    display: none;
    background-color: white; 
}

.control-form-radio label {
    cursor: pointer;
    position: relative;
    background-repeat: no-repeat;
    width: 70px; 
    height: 70px;
    border-radius: 50%; 
    background-color: white;
    transition: background-color 0.3s;
}

.control-form-radio input[type="radio"]:checked + label {
    background-color: var(--red); 
}


.control-form-radio .input-image {
    width: 100%; 
    height: 100%; 
    background-size: cover;
    display: block;
    background-color: transparent;
    border-radius: 50%; 
}

#cachorro-pet + label {
    background-image: url("../assets/image\ 168.svg"); 
}

#gato-pet + label {
    background-image: url("../assets/cat\ 1.svg"); 
}

.control-form-buttons {
    display: flex;
    flex-direction: column;
    gap: 40px;
    margin-right: 23px;
}


.control-form-info{
    display: flex;
    flex-direction: column;
}
.control-form-info select{
    width: 100%;
    height: 30px;
    margin-top: 30px;
    margin-bottom: 30px;
    
}
.control-form-info label{
    height: 15px;
}
.control-form-info input{
    width: 100%;
}

.btn1 {
    border: solid var(--dark-red) 1.5px;
    height: 40px;
    padding: 6px 40px;
    background-color: #000000;
    color: rgb(0, 0, 0);
    font-size: 1rem;
    cursor: pointer;
    transition: box-shadow .6s ease;
    border-radius: 5px;
}

.btn1 {
    background-color: #ffff;
}

.btn1 a {
    text-decoration: none;
    cursor: pointer;
    color: black;
}

.btn1:hover {
    box-shadow: inset 200px 0 0 var(--red);
}

.btn2 {
    border: solid var(--dark-red) 1.5px;
    height: 40px;
    padding: 6px 40px;
    background-color: #000000;
    color: rgb(0, 0, 0);
    font-size: 1rem;
    cursor: pointer;
    transition: box-shadow .6s ease;
    border-radius: 5px;
}

.btn2 {
    background-color: #ffff;
}

.btn2:hover {
    box-shadow: inset 200px 0 0 var(--red);
}


.control-form-buttons button:hover {
    box-shadow: inset 200px 0 0 var(--red);
}

fieldset {
    border: none;
    padding: 0;
    margin: 0;
}

legend {
    display: none;
}

